# devops-engineer-from-scratch-project-313

./: Makefile  README.md  main.py  pyproject.toml  ruff.toml  test_main.py
.github/workflows/: ci.yml
